# ljp

./: docker-compose.dev.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/data/: mydb.db
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2025-11-12-224459-0000_create_notes/: down.sql  up.sql
backend/migrations/2025-12-29-000000_add_named_notes/: down.sql  up.sql
backend/src/: config.rs  main.rs  migrations.rs  models.rs  notes.rs  schema.rs  tgbot.rs
frontend/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/auth/: AuthContext.jsx
frontend/src/components/ui/: button.jsx  card.jsx  input.jsx
frontend/src/layout/: MainLayout.jsx
frontend/src/lib/: date.js
frontend/src/pages/: DashboardPage.jsx  EditNamedNotePage.jsx  EditNotePage.jsx  HomePage.jsx  LoginPage.jsx  NamedNotesPage.jsx  NotesPage.jsx  OverviewPage.jsx  RegisterPage.jsx
mc-1/: .env  Dockerfile  README.md  go.mod  main.go
