[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5.3"
once_cell = "1.21.3"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.8", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
dotenvy = "0.15"
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
pq-sys = { version = "0.7.5", features = ["bundled_without_openssl"] }
diesel_migrations = "2.3.0"